# ubench

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists_full.txt  Makefile  README.md  TASK.md  c5_scaling.csv  download_code.sh  extract_ground_truth.py  optimize_mte.py  report_template.md  run_all.py  run_all_optimized.py  setup_env.sh  setup_env_910b.sh  test_imports.py
cmake_patches/: device_precompile_project_CMakeLists.txt  function.cmake
common/: __init__.py  acl_compat.h  acl_utils.cpp  acl_utils.h  bench_runner.h  bench_utils.cpp  bench_utils.h  benchmark.py  kernel_launch_wrapper.cpp  launch_stubs.cpp  ubench_kernels.h  utils.py
cube/: __init__.py  c1_tile_latency.py  c2_throughput.py  c3_pipeline_depth.py  c4_l0_latency.py  c5_scaling.py  cube_matmul_kernel.cpp
cube/scaling/: main.cpp
cube/throughput/: main.cpp
cube/tile_latency/: main.cpp
mte/: __init__.py  m1_l1_read_bw.py  m1_l1_read_bw_v2.py  m2_l1_write_bw.py  m3_m4_m5_l0_bw.py  m6_hbm_latency.py  m7_buffer_capacity.py  m8_startup_overhead.py  run_optimized_mte.py
mte/buffer_capacity/: kernel.cpp  main.cpp
mte/copy_bw/: kernel.cpp  main.cpp
mte/granularity/: kernel.cpp  main.cpp
mte/hbm_latency/: kernel.cpp  main.cpp
mte/startup_latency/: kernel.cpp  main.cpp
mte/write_bw/: kernel.cpp  main.cpp
results/: README.md  all_results.json  cube_results.json  dashboard.html  extracted_params.json  mte_copy_bw.csv  mte_copy_bw.txt  mte_granularity.csv  mte_granularity.txt  mte_results.json  mte_results_optimized.json  mte_startup_latency.csv  mte_startup_latency.txt  optimization_report.md  scalar_arith_latency.csv  scalar_arith_latency.txt  scalar_branch_overhead.csv  scalar_branch_overhead.txt  scalar_results.json  summary.csv  vector_add_latency.csv  vector_add_latency.txt  vector_mul_latency.csv  vector_mul_latency.txt  vector_pipeline_depth.csv  vector_pipeline_depth.txt  vector_results.json  vector_throughput.csv  vector_throughput.txt
results/html/: build_data.py  index.html
scalar/: __init__.py  s1_latency.py  s2_throughput.py  s3_mem_latency.py  scalar_kernel.cpp
scalar/arith_latency/: main.cpp
scalar/branch_overhead/: main.cpp
scalar/mem_latency/: main.cpp
scalar/throughput/: main.cpp
scripts/: README.md  build.sh  build_and_run_910b.sh  build_ascend.sh  build_kernels.sh  build_manual.sh  build_one_click.sh  generate_report.sh  profile.sh  run_all.sh  run_and_report.sh  setup_env.sh  summarize_csv.sh
vector/: __init__.py  v1_add_latency.py  v2_mul_latency.py  v3_throughput.py  v4_pipeline_depth.py  v5_reg_latency.py
vector/add_latency/: kernel.cpp  main.cpp
vector/mul_latency/: kernel.cpp  main.cpp
vector/pipeline_depth/: kernel.cpp  main.cpp
vector/reg_latency/: kernel.cpp  main.cpp
vector/throughput/: kernel.cpp  main.cpp
